--- a/eng-app/src/css/quasar.variables.scss
+++ b/eng-app/src/css/quasar.variables.scss
@@ -12,14 +12,14 @@
 // to match your app's branding.
 // Tip: Use the "Theme Builder" on Quasar's documentation website.
 
-$primary: #1976d2;
-$secondary: #26a69a;
-$accent: #9c27b0;
+$primary: #3949ab; // Indigo-6
+$secondary: #546e7a; // Blue Grey-7
+$accent: #5c6bc0; // Indigo-4
 
-$dark: #1d1d1d;
-$dark-page: #121212;
+$dark: #263238; // Blue Grey-9
+$dark-page: #eceff1; // Blue Grey-1
 
-$positive: #21ba45;
-$negative: #c10015;
-$info: #31ccec;
-$warning: #f2c037;
+$positive: #43a047; // Green-7
+$negative: #e53935; // Red-6
+$info: #039be5; // Light Blue-7
+$warning: #fdd835; // Yellow-7
